@@ -1,3 +1,10 @@
+2003-11-11  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* unix/configure:
+	* unix/tcl.m4: improve AIX --enable-64bit handling
+	remove -D__NO_STRING_INLINES -D__NO_MATH_INLINES from
+	CFLAGS_OPTIMIZE on Linux.  Make default opt -O2 (was -O).
+
 2003-11-11  David Gravereaux <davygrvy@pobox.com>
 
 	* contrib/djgpp/Makefile:  Suggested changes from vitus@45.free.net
